--- a/public/style.scss
+++ b/public/style.scss
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   width: 100vw;
@@ -8,21 +10,27 @@ body {
 }
 
 .navigation ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+
   width: 100%;
   padding: 0;
+
   list-style-type: none;
 }
 
 .navigation ul li a {
   display: inline-block;
+  
   height: 30px;
   width: 75px;
   padding-top: 10px;
+
   text-align: center;
   text-decoration: none;
   font-weight: bold;
+  
+  &:hover {
+    
+  }
 }
-/*# sourceMappingURL=style.css.map */
+
