--- a/public/style.scss
+++ b/public/style.scss
@@ -40,6 +40,14 @@ a {
   }
 }
 
+nav {
+  margin: 50px 0;
+}
+
+section {
+  margin-top: 50px;
+}
+
 article {
   background-color: $darkBr;
 }
@@ -68,6 +76,11 @@ td {
   padding: 10px;
 }
 
+footer p {
+  margin-top: 50px;
+  padding-left: 15px;
+}
+
 .page-header {
   width: 100%;
   text-align: center;
@@ -80,6 +93,7 @@ td {
 
 .navigation ul {
   display: flex;
+  justify-content: center;
 
   width: 100%;
   padding: 0;
@@ -125,7 +139,17 @@ main {
   }
 }
 
+
+// Desktop styles
 @media screen and (min-width: 900px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  nav a {
+    font-size: 24px;    
+  }
+
   main {
     max-width: 50%;
     margin: auto;
@@ -134,6 +158,8 @@ main {
   .intro-text {
     margin-top: 50px;
     margin-bottom: 50px;
+
+    font-size: 18px;
   }
 
   table {
